Fixed about me postcard text to change properly in light and dark modes

--- a/src/index.css
+++ b/src/index.css
@@ -285,6 +285,11 @@ p,
     color: var(--light-text);
   }
 
+  .me-text,
+  .highlights {
+    color: var(--postcard-text);
+  }
+
   #learn,
   .project-view,
   .contactMethods {
